# typope

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  lang.rs  lib.rs  lint.rs  lock.rs  main.rs  tree.rs
src/lang/: c.rs  cargo_toml.rs  cpp.rs  go.rs  javascript.rs  json.rs  kotlin.rs  markdown.rs  python.rs  rust.rs  toml.rs  typescript.rs  yaml.rs
src/lint/: punctuation.rs  space_before.rs
tests/: cli.rs
tests/cmd/: dump-config.toml  files.toml  help.toml  strings.toml
tests/cmd/strings.in/: test.c  test.md
