[package]
name = "typope"
edition = "2021"
description = "Pedantic source code checker for orthotypography mistakes and other typographical errors"
version = "0.4.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.74.0"
categories = ["command-line-utilities", "development-tools", "text-processing"]
keywords = ["typography", "development", "spelling", "pedantic"]
include = ["README.md", "CHANGELOG.md", "/src/*", "/LICENSE*"]
repository = "https://github.com/ronnychevalier/typope"

[features]
default = ["lang-all"]
lang-all = [
    "lang-c",
    "lang-cpp",
    "lang-go",
    "lang-javascript",
    "lang-json",
    "lang-markdown",
    "lang-python",
    "lang-rust",
    "lang-toml",
    "lang-typescript",
    "lang-yaml",
    "lang-kotlin",
]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-go = ["dep:tree-sitter-go"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-markdown = ["dep:tree-sitter-md", "dep:btree-range-map"]
lang-python = ["dep:tree-sitter-python"]
lang-rust = ["dep:tree-sitter-rust"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]

[dependencies]
anyhow = "1.0.86"
btree-range-map = { version = "0.7.2", optional = true }
clap = { version = "4.5.9", features = ["derive"] }
globset = "0.4.15"
ignore = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_regex = "1.1.0"
tempfile = "3.10.1"
thiserror = "1.0.61"
toml = "0.8.14"
tree-sitter = "0.26"
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-md = { version = "0.5", optional = true, features = ["parser"] }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
winnow = "0.7"

[lints.rust]
trivial_numeric_casts = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic_in_result_fn = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
panic = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unimplemented = "warn"
cast_lossless = "warn"
trailing_empty_array = "warn"
as_ptr_cast_mut = "warn"
lint_groups_priority = "allow"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dev-dependencies]
tempfile = "3.10.1"
